--- a/demos/pc/windows/visual_studio/aws_demos.vcxproj
+++ b/demos/pc/windows/visual_studio/aws_demos.vcxproj
@@ -99,11 +99,9 @@
     <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender.c" />
     <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender_collector.c" />
     <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender_mqtt.c" />
-    <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender_reporter_socket.c" />
     <ClCompile Include="..\..\..\..\lib\defender\portable\freertos\aws_defender_cpu.c" />
     <ClCompile Include="..\..\..\..\lib\defender\portable\freertos\aws_defender_tcp_conn.c" />
     <ClCompile Include="..\..\..\..\lib\defender\portable\freertos\aws_defender_uptime.c" />
-    <ClCompile Include="..\..\..\..\lib\defender\portable\freertos\aws_iot_defender_metrics_socket.c" />
     <ClCompile Include="..\..\..\..\lib\defender\report\aws_defender_report.c" />
     <ClCompile Include="..\..\..\..\lib\defender\report\aws_defender_report_cpu.c" />
     <ClCompile Include="..\..\..\..\lib\defender\report\aws_defender_report_header.c" />
@@ -141,6 +139,7 @@
     <ClCompile Include="..\..\..\..\lib\FreeRTOS\timers.c" />
     <ClCompile Include="..\..\..\..\lib\greengrass\aws_greengrass_discovery.c" />
     <ClCompile Include="..\..\..\..\lib\greengrass\aws_helper_secure_connect.c" />
+    <ClCompile Include="..\..\..\..\lib\metrics\iot_metrics.c" />
     <ClCompile Include="..\..\..\..\lib\mqtt\aws_iot_mqtt_api.c" />
     <ClCompile Include="..\..\..\..\lib\mqtt\aws_iot_mqtt_operation.c" />
     <ClCompile Include="..\..\..\..\lib\mqtt\aws_iot_mqtt_serialize.c" />
@@ -154,6 +153,7 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\lib\pkcs11\mbedtls\aws_pkcs11_mbedtls.c" />
     <ClCompile Include="..\..\..\..\lib\pkcs11\portable\pc\windows\aws_pkcs11_pal.c" />
+    <ClCompile Include="..\..\..\..\lib\secure_sockets\aws_secure_sockets_wrapper_metrics.c" />
     <ClCompile Include="..\..\..\..\lib\secure_sockets\portable\freertos_plus_tcp\aws_secure_sockets.c" />
     <ClCompile Include="..\..\..\..\lib\serializer\cbor\aws_iot_serializer_tinycbor_decoder.c" />
     <ClCompile Include="..\..\..\..\lib\serializer\cbor\aws_iot_serializer_tinycbor_encoder.c" />
@@ -253,6 +253,7 @@
     <ClCompile Include="..\..\..\..\lib\utils\platform\static_memory\aws_iot_static_memory_common_posix.c" />
     <ClCompile Include="..\..\..\..\lib\utils\platform\static_memory\aws_iot_static_memory_mqtt_posix.c" />
     <ClCompile Include="..\..\..\common\defender\aws_defender_demo.c" />
+    <ClCompile Include="..\..\..\common\defender\aws_iot_demo_defender.c" />
     <ClCompile Include="..\..\..\common\demo_runner\aws_demo_runner.c" />
     <ClCompile Include="..\..\..\common\devmode_key_provisioning\aws_dev_mode_key_provisioning.c" />
     <ClCompile Include="..\..\..\common\greengrass_connectivity\aws_greengrass_discovery_demo.c" />
@@ -306,6 +307,7 @@
     <ClInclude Include="..\..\..\..\lib\include\FreeRTOS_POSIX\time.h" />
     <ClInclude Include="..\..\..\..\lib\include\FreeRTOS_POSIX\unistd.h" />
     <ClInclude Include="..\..\..\..\lib\include\FreeRTOS_POSIX\utils.h" />
+    <ClInclude Include="..\..\..\..\lib\include\iot_metrics.h" />
     <ClInclude Include="..\..\..\..\lib\include\platform\aws_iot_clock.h" />
     <ClInclude Include="..\..\..\..\lib\include\platform\aws_iot_network.h" />
     <ClInclude Include="..\..\..\..\lib\include\platform\aws_iot_static_memory.h" />
@@ -365,6 +367,7 @@
     <ClInclude Include="..\..\..\..\lib\include\private\aws_mqtt_lib_private.h" />
     <ClInclude Include="..\..\..\..\lib\include\private\aws_ota_cbor.h" />
     <ClInclude Include="..\..\..\..\lib\include\private\aws_secure_sockets_config_defaults.h" />
+    <ClInclude Include="..\..\..\..\lib\include\private\aws_secure_sockets_wrapper_metrics.h" />
     <ClInclude Include="..\..\..\..\lib\include\private\aws_shadow_config_defaults.h" />
     <ClInclude Include="..\..\..\..\lib\include\private\aws_ota_pal.h" />
     <ClInclude Include="..\..\..\..\lib\include\private\aws_ota_types.h" />
