--- a/demos/pc/windows/visual_studio/aws_demos.vcxproj.filters
+++ b/demos/pc/windows/visual_studio/aws_demos.vcxproj.filters
@@ -154,6 +154,9 @@
     <Filter Include="lib\aws\serializer\json">
       <UniqueIdentifier>{c77547ea-9c4c-4ccc-9fa6-1dde5590e584}</UniqueIdentifier>
     </Filter>
+    <Filter Include="lib\aws\metrics">
+      <UniqueIdentifier>{454aac63-01b6-4d69-9b6a-2e3367465a66}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\lib\crypto\aws_crypto.c">
@@ -684,9 +687,6 @@
     <ClCompile Include="..\..\..\..\lib\common\aws_iot_json_utils.c">
       <Filter>lib\aws\common</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\lib\defender\portable\freertos\aws_iot_defender_metrics_socket.c">
-      <Filter>lib\aws\defender\portable</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender.c">
       <Filter>lib\aws\defender</Filter>
     </ClCompile>
@@ -694,9 +694,6 @@
       <Filter>lib\aws\defender</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender_mqtt.c">
-      <Filter>lib\aws\defender</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\lib\defender\aws_iot_defender_reporter_socket.c">
       <Filter>lib\aws\defender</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\lib\serializer\cbor\aws_iot_serializer_tinycbor_decoder.c">
@@ -710,6 +707,15 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\lib\serializer\json\aws_iot_serializer_json_encoder.c">
       <Filter>lib\aws\serializer\json</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\common\defender\aws_iot_demo_defender.c">
+      <Filter>application_code\common_demos\source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\lib\metrics\iot_metrics.c">
+      <Filter>lib\aws\metrics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\lib\secure_sockets\aws_secure_sockets_wrapper_metrics.c">
+      <Filter>lib\aws\secure_sockets</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1363,6 +1369,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\lib\include\private\aws_iot_defender_internal.h">
       <Filter>lib\aws\include\private</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lib\include\private\aws_secure_sockets_wrapper_metrics.h">
+      <Filter>lib\aws\include\private</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lib\include\iot_metrics.h">
+      <Filter>lib\aws\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
