--- a/tests/unisoc/ivy5661/eclipse/.project
+++ b/tests/unisoc/ivy5661/eclipse/.project
@@ -65,6 +65,11 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>lib/bufferpool</name>
+			<type>2</type>
+			<locationURI>AFR_HOME/lib/bufferpool</locationURI>
+		</link>
+		<link>
 			<name>lib/crypto</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
@@ -88,6 +93,11 @@
 			<name>application_code/common_test/include</name>
 			<type>2</type>
 			<locationURI>AFR_HOME/tests/common/include</locationURI>
+		</link>
+		<link>
+			<name>application_code/common_test/mqtt</name>
+			<type>2</type>
+			<locationURI>AFR_HOME/tests/common/mqtt</locationURI>
 		</link>
 		<link>
 			<name>application_code/common_test/pkcs11</name>
@@ -143,6 +153,11 @@
 			<name>lib/aws/include</name>
 			<type>2</type>
 			<locationURI>AFR_HOME/lib/include</locationURI>
+		</link>
+		<link>
+			<name>lib/aws/mqtt</name>
+			<type>2</type>
+			<locationURI>AFR_HOME/lib/mqtt</locationURI>
 		</link>
 		<link>
 			<name>lib/aws/secure_sockets</name>
